<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DouDouToDoList</string>
    <string name="title_todo">待办任务</string>
    <string name="title_add_info">添加任务</string>
    <string name="title_complete">已完成任务</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add_item">+</string>
    <string name="action_settings">Settings</string>
    
    <string name="edit_item_view_title_text_hint">任务标题</string>
    <string name="edit_item_view_date_button_default_text">设置日期</string>
    <string name="edit_item_view_time_button_default_text">设置时间</string>
    <string name="edit_item_view_is_everyday_checkbox_default_text">是否每天重复</string>
    <string name="edit_item_view_add_photo_button_default_text">添加照片</string>
    <string name="edit_item_view_cancel_button_default_text">取消</string>
	<string name="edit_item_view_save_button_default_text">保存</string>
	<string name="date_dialog_cancel_button_default_text">取消</string>
	<string name="date_dialog_save_button_default_text">保存</string>
	<string name="date_dialog_title">设置日期</string>
	<string name="time_dialog_title">设置时间</string>
	<string name="time_dialog_cancel_button_default_text">取消</string>
	<string name="time_dialog_save_button_default_text">保存</string>
	<string name="todo_item_info_title">任务详情</string>
	<string name="todo_item_info_back_button_default_text">返回</string>
	<string name="today_todo_item_view_button_default_text">完成</string>
	<string name="edit_item_view_title_is_incomplete">任务标题不能为空</string>
	<string name="todo_item_detail_view_image_description">待办照片</string>
</resources>
